--- a/TaskTracker.BLL/TaskTracker.BLL.csproj
+++ b/TaskTracker.BLL/TaskTracker.BLL.csproj
@@ -10,4 +10,8 @@
     <ProjectReference Include="..\TaskTracker.DAL\TaskTracker.DAL.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="11.0.1" />
+  </ItemGroup>
+
 </Project>
