--- a/TaskTracker/appsettings.Development.json
+++ b/TaskTracker/appsettings.Development.json
@@ -4,5 +4,8 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "PostgreSql": "Server=localhost; Port=5432; User Id=postgres; Password=Nomad1984; Database=gspark"
   }
 }
