--- a/TaskTracker/appsettings.Development.json
+++ b/TaskTracker/appsettings.Development.json
@@ -6,6 +6,6 @@
     }
   },
   "ConnectionStrings": {
-    "PostgreSql": "Server=localhost; Port=5432; User Id=postgres; Password=Nomad1984; Database=gspark"
+    "PostgreSql": "Server=localhost; Port=5432; User Id=postgres; Password=Nomad1984; Database=TaskTracker"
   }
 }
